# rust_quarto

./: .gitignore  Cargo.toml  README.md
quarto_console/: Cargo.toml  README.md
quarto_console/src/: main.rs
quarto_game/: Cargo.toml
quarto_game/src/: board.rs  error.rs  game.rs  lib.rs  mod.rs  move.rs  piece.rs  player.rs
quarto_game/src/ai/: minmax.rs  minmax_tree.rs  mod.rs  random.rs  score.rs
quarto_wasm/: Cargo.toml  index.html
quarto_wasm/src/: board.rs  buttons.rs  game.rs  lib.rs  main.rs  pieces.rs
src/: board.rs  error.rs  game.rs  lib.rs  main.rs  piece.rs  player.rs
src/ai/: minmax.rs  minmax_tree.rs  mod.rs  random.rs  score.rs
src/game/: board.rs  mod.rs  piece.rs
