[package]
name = "quarto_game"
version = "0.1.0"
edition = "2021"
authors = ["Romain FRIOT <friotromain@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
cfg-if = "1.0.0"
ansi_term = "0.12.1"
enum-iterator = "0.8.1"
env_logger = "0.9.0"
termtree = "0.4.0"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
prettytable-rs = { version = "0.8.0", optional = true }

[dev-dependencies]
ctor = "0.1.22"

[features]
default = ["console_display"]
console_display = ["dep:prettytable-rs"]