[package]
name = "quarto_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.2.1"
prettytable-rs = "0.8.0"
ansi_term = "0.12.1"
enum-iterator = "0.7.0"
log = "0.4.16"
console_log = { version = "0.2", optional = true, features = ["color"] }