[package]
name = "quarto_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quarto_game = { path = "..", default-features = false }
log = "0.4.17"
wasm-bindgen = "0.2.81"
wasm-logger = "0.2.0"
yew = "0.19.3"